[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "yt_tool"
version = "4.0.0"
description = "A simple YouTube download tool using yt-dlp and rich"
authors = [{name = "mahmood", email = "hello@email.com"}]
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "rich",
    "yt-dlp"
]

[project.scripts]
yt-tool = "yt_tool:main"
